[package]
name = "console_tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.22.0", features = ["all-widgets"] }
crossterm = "0.26"
grid = "0.10.0"
ctrlc = "3.4.0"
rand = "0.8.5"
